2017-12-30  Araki Ken  <arakiken@users.sf.net>

	* vterm.c, ui_screen.c: RLogin way of calculating the number of columns
	  of sixel graphics image is changed from 'width / col_width' to
	  '(width + 1) / col_width'.

	* doc/en/DRCS-SIXEL-v2: Added.

2017-12-29  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.[ch], ui_screen.c: Unless ENABLE_OSC5379PICTURE is defined,
	  "show_picture" and "add_frame" are removed from OSC 5379.

	* vterm.c, ui_screen.c:
	  RLogin way of calculating the number of columns and rows of sixel
	  graphics image is changed from ({width|height} + 1) / col_{width|height}
	  to {width|height} / col_{width|height}.

	* c_sixel.c: char* => const char*

	* ef_iso2022_parser.[ch], ef_utf{16|32}_conv.[ch]:
	  The tyep of return value of ef_iso2022_parser_init_func() and
	  ef_utf{16|32}_conv_use_bom() is changed from int to void.

2017-12-25  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c:
	  - save_sixel_or_regis() is added.
	  - DRCS-Sixel sequence which rlogin originally supports is processed.
	  - If OSC 5379;drcs_sixel_version=2, cols and rows of DRCS-Sixel image
	    are rounded up.

	* vt_drcs.[ch]:
	  - vt_drcs_add_picture() and vt_drcs_get_picture() are added.
	  - 'vt_drcs_t *drcs' is added to arguments of vt_drcs_get_font(),
	    vt_drcs_final() and vt_drcs_final_full().

	* ui_screen.c, ui_screen_manager.c:
	  xterm_get_picture_data() returns num_cols_small and num_rows_small.

	* vterm.c:
	  - write_to_stdout() is added.
	  - xterm_get_picture_data() returns num_cols_small and num_rows_small.
	  - If the value of "DRCS_SIXEL_VERSION" environmental variable is "2",
	    num_cols and num_rows are rounded up.
	  - vt_convert_drcs_to_unicode_pua() and vt_convert_unicode_pua_to_drcs()
	    processes following extension.
	    U+10XXZZ (0x40 <= 0xXX <= 0x7E, 0xA0 <= 0xZZ <= 0xFF)
	    => ESC - SP <\xXX> <\xYY>

	* encodefilter/src/Makefile.in: MAJOR.MINOR 1.0 => 2.0
