@@ -1,5 +1,9 @@
 2017-12-30  Araki Ken  <arakiken@users.sf.net>
 
+	* vterm.c: default_fg and default_bg are the same as original libvterm.
+
+2017-12-30  Araki Ken  <arakiken@users.sf.net>
+
 	* vterm.c, ui_screen.c: RLogin way of calculating the number of columns
 	  of sixel graphics image is changed from 'width / col_width' to
 	  '(width + 1) / col_width'.
